Fix scrolling on mobile devices

--- a/src/Pages/Foreground/Foreground.scss
+++ b/src/Pages/Foreground/Foreground.scss
@@ -158,7 +158,7 @@
 		}
 	}
 	.blobfish {
-		opacity: 0.05 !important;
+		opacity: 0.1 !important;
 		+ .message-display {
 			animation: fade-in2 0.5s forwards !important;
 		}
